<resources>
    <string name="app_name1">Playlist Maker</string>
    <string name="app_name">MyApp</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>

</resources>