<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:padding="@dimen/padding_standard">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name1"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="start" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_height"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_height"
            android:layout_weight="1"
            android:layout_margin="@dimen/card_margin"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/activity_cornerRadius"
            android:text="@string/search"
            android:padding="@dimen/activity_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_standard"
            android:gravity="center"
            android:drawablePadding="@dimen/activity_padding"/>
        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_height"
            android:layout_weight="1"
            android:layout_margin="@dimen/card_margin"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/activity_cornerRadius"
            android:text="@string/library"
            android:padding="@dimen/activity_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_standard"
            android:gravity="center"
            android:drawablePadding="@dimen/activity_padding"/>
        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_height"
            android:layout_weight="1"
            android:layout_margin="@dimen/card_margin"
            app:icon="@drawable/setting"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/activity_cornerRadius"
            android:text="@string/settings"
            android:padding="@dimen/activity_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_standard"
            android:gravity="center"
            android:drawablePadding="@dimen/activity_padding"/>

    </LinearLayout>

</LinearLayout>